# MorphIO

./: CMakeLists.txt  conda_build_environment.yaml  pyproject.toml
doc/source/: install.rst
morphio/: __init__.py
